Warning removal